--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
     <div class="container">
       <%= render 'layouts/header' %>
       <section class="round">
+        <% flash.each do |key, value| %>
+          <div class="flash <%= key %>"><%= value %></div>
+        <% end %>
+        <%= yield %>
+      </section>
+      <section class="round">
         <%= yield %>
       </section>
       <%= render 'layouts/footer' %>
