--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,11 @@
       <%= render 'layouts/header' %>
       <section class="round">
         <% flash.each do |key, value| %>
-          <div class="flash <%= key %>"><%= value %></div>
-        <% end %>
+          <%= content_tag(:div, value, :class => "flash #{key}") %>
+        <% end %> 
         <%= yield %>
-      </section>
-      <section class="round">
-        <%= yield %>
-      </section>
+      </section>   
+
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
